Fixed new tweet posting to have a collapse animation, instead of just disappearing.

--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -135,4 +135,6 @@
 .smaller {
   margin-left: 15px;
   margin-right: 15px;
+  font-weight: bold;
+
 }
